--- a/static/assignment564/lab02.Rmd
+++ b/static/assignment564/lab02.Rmd
@@ -397,5 +397,5 @@ $$\hat\beta_1-t_{\frac\alpha2,n-2}\sqrt\frac{MSE}{\sum_{i=1}^n x_i^2}\le\beta_1\
 
 $$Var(\beta_1)\ge Var(\beta_0)$$
 
- > confidence intervals for $\beat_1$ will be narrower when $\beat_0$ is known,
+ > confidence intervals for $\beta_1$ will be narrower when $\beta_0$ is known,
 regardless of sample size (unless $\bar x=0$).
