--- a/docs/assignment561/hw03.Rmd
+++ b/docs/assignment561/hw03.Rmd
@@ -19,6 +19,7 @@ c. F is right-continuous; that is, for every number x0, $\lim_{x\to\infty}F(x)=F
 let $C_1,C_2$,...be a sequance of events such that $C1\subset C_2\subset$... 
 
 let $A_1=C_1$ and for $n\ge2,\ A_n=C_n\setminus C_{n-1}$, then
+
 $$\bigcup_{i=1}^\infty A_i=\bigcup_{i=1}^\infty C_i$$
 
 $$P[\lim_{n\to\infty}C_n]=P[\lim_{n\to\infty}\bigcup_{i=1}^nC_i]=P[\bigcup_{i=1}^{\infty}C_i]=P[\bigcup_{i=1}^{\infty}A_i]=\sum_{i=1}^{\infty}P(A_i)=\lim_{n\to\infty}\sum_{i=1}^nP(A_i)$$
@@ -54,15 +55,15 @@ $$left\quad \lim_{n\to\infty}P(B_n)=\lim_{n\to\infty}P\left((-\infty,\ x+\frac1n
 
 $$\therefore \lim_{n\to\infty}F_X(x+\frac1n)=F_X(x)$$
 
-> According to the uniform convergence theorem, we can proof condition c, a CDF is right-continuous.
+According to the uniform convergence theorem, we can proof condition c, a CDF is right-continuous.
 
 > Step2: Proof (b)
 
-> let $x_i<x_j,\ C_i\in(-\infty,x_i), C_j\in(-\infty,x_j)$, hence $C_i\subset C_j$
+let $x_i<x_j,\ C_i\in(-\infty,x_i), C_j\in(-\infty,x_j)$, hence $C_i\subset C_j$
 
 $$\therefore P(\lim_{n\to\infty}C_i)<P(\lim_{n\to\infty}C_j) \implies \lim_{n\to\infty}P(C_i)<\lim_{n\to\infty}P(C_j)\implies \lim_{n\to\infty}F(x_i)<\lim_{n\to\infty}F(x_j)$$
 
-> Therefore, for any $x_i<x_j,\ \lim_{n\to\infty}F(x_i)<\lim_{n\to\infty}F(x_j)$. A CDF is non-decreasing.
+Therefore, for any $x_i<x_j,\ \lim_{n\to\infty}F(x_i)<\lim_{n\to\infty}F(x_j)$. A CDF is non-decreasing.
 
 > Step3: Proof (a)
 
@@ -87,7 +88,7 @@ $$f_Y(y)=\frac{dF_Y(y)}{dy}=\frac{d\sqrt y}{dy}=\frac1{2\sqrt y},\quad 0<y<1$$
 $$f_X(x)=\frac{(n+m+1)!}{n!m!}x^n(1-x)^m,\quad 0<x<1,\quad
 n,m\ positive\ integers$$
 
- > $Y=-\log X$ is a monotone decreasing function. We can use shortcut.
+$Y=-\log X$ is a monotone decreasing function. We can use shortcut.
 
 $$\because Y=-\log X,\quad \therefore X=e^{-Y}$$
 
@@ -97,7 +98,7 @@ $$f_Y(y)=f_X(x)|\frac{dx}{dy}|=\frac{(n+m+1)!}{n!m!}(e^{-y})^n(1-e^{-y})^m|\frac
 
 $$fx(x)=\frac1{\sigma^2}xe^{-(x/\sigma)^2/2},\quad 0<x<\infty,\quad\sigma^2\ a\ positive\ constant$$
 
- > $Y=e^X$ is a monotone increasing function. We can use shortcut.
+$Y=e^X$ is a monotone increasing function. We can use shortcut.
 
 $$\because Y=e^X,\quad \therefore X=\ln Y$$
 
@@ -107,9 +108,9 @@ $$f_Y(y)=f_X(x)|\frac{dx}{dy}|=\frac1{\sigma^2}xe^\frac{-(\frac x\sigma)^2}2|\fr
 
 $$\because Y=d\tan X,\quad \therefore X=\arctan\frac Yd$$
 
- > $Y=d\tan X$ is a monotone inecreasing function. We can use shortcut.
+$Y=d\tan X$ is a monotone inecreasing function. We can use shortcut.
 
-> Let $F_X(x)=cx$ is a cdf, $\lim_{n\to\infty}cx=1,\quad0<x<\pi/2$. Hence, $c=\frac2\pi$ safisfy the equation.
+Let $F_X(x)=cx$ is a cdf, $\lim_{n\to\infty}cx=1,\quad0<x<\pi/2$. Hence, $c=\frac2\pi$ safisfy the equation.
 
 $$\therefore F_X(x)=\frac{2x}\pi,\quad  f_X(x)=\frac2\pi\quad 0<x<\pi/2$$
 
@@ -117,7 +118,7 @@ $$f_Y(y)=f_X(x)|\frac{dx}{dy}|=\frac2\pi|\frac{d(\arctan\frac yd)}{dy}|=\frac2\p
 
 $$\because 0<X<\pi/2,\quad Y=d\tan X\in(0,\infty)\quad \therefore E[Y]\sim\infty$$
 
- > The mean of Y is infinite.
+The mean of Y is infinite.
 
 **2.17** A median of a distribution is a value m such that $P(X\le m)\ge\frac12\ and\ P(X\ge m)\ge\frac12$. (If X i s continuous, m satisfies $\int_{-\infty}^mf(x)dx=\int_m^\infty f(x)dx=\frac12$.) Find the median of the following distributions.
 
@@ -128,23 +129,23 @@ $$F_X(x)=\int{f(x)dx}=\int3x^2=x^3\quad 0<x<1$$
 
 $$\lim_{x\to\infty}F_X(x)=\lim_{x\to\infty}x^3=1\quad 0<x<1$$
 
-> F(x) is a cdf and has a pdf f(x).
+F(x) is a cdf and has a pdf f(x).
 
 $$(1)\quad \int_{0}^m{f(x)dx}=m^3-0=\frac12,\quad m=(\frac12)^{\frac13}$$
 
 $$(2)\quad \int_m^{1}{f(x)dx}=1-m^3=\frac12$$
 
-> Therefore, $m=(\frac12)^{\frac13}$ saitisfies $P(X\le m)\ge\frac12\ and\ P(X\ge m)\ge\frac12$ and is the median of this distribution.
+Therefore, $m=(\frac12)^{\frac13}$ saitisfies $P(X\le m)\ge\frac12\ and\ P(X\ge m)\ge\frac12$ and is the median of this distribution.
 
 (b) $f(x)=\frac1{\pi(1+x^2)},\quad-\infty<x<\infty$
 
 $$F_X(x)=\int{f(x)dx}=\int\frac1{\pi(1+x^2)}=\frac{\arctan x}{\pi},\quad -\infty<x<\infty$$
 $$\lim_{x\to\infty}F_X(x)=\frac1\pi(\frac\pi2+\frac\pi2)=1$$
 
-> F(x) is a cdf and has a pdf f(x).
+F(x) is a cdf and has a pdf f(x).
 
 $$(1)\quad \int_{-\infty}^m{f(x)dx}=\frac{\arctan m-(-\pi/2)}{\pi}=\frac12,\quad \arctan m=0,\quad m=0$$
 
 $$(2)\quad\int_m^{\infty}{f(x)dx}=\frac{\pi/2-\arctan m}{\pi}=\frac12$$
 
-> Therefore, $m=0$ saitisfies $P(X\le m)\ge\frac12\ and\ P(X\ge m)\ge\frac12$ and is the median of this distribution.
+Therefore, $m=0$ saitisfies $P(X\le m)\ge\frac12\ and\ P(X\ge m)\ge\frac12$ and is the median of this distribution.
