--- a/static/lecture561/lecture03.Rmd
+++ b/static/lecture561/lecture03.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Transformation & Expectation"
+title: "2. Transformation"
 subtitle: "STAT 561 Week 3,4"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output:
@@ -18,10 +18,81 @@ output:
 
 `2018.10.11`
 
+#### 1-3. Example
+
+$$F_X(x)=\begin{cases}0 &x\le-1\\ \frac12(x+1) &-1\le x\le1\\1 &x\ge1\end{cases}$$
+
+Let $Y=X^2$, find its cdf
+
+$$F_Y(y)=P(Y\le y)=P(X^2\le y)=P(-\sqrt y\le X\le\sqrt y)=P(X\le\sqrt y)-P(X\le-\sqrt y)=F_X(\sqrt y)-F_X(-\sqrt y)$$
+
+$$(X\le\sqrt y)\cap (X\le-\sqrt y)$$
+
+> Note: remember that our F was continuous
+
+$$F_Y(y)=\begin{cases}0 &y<0\\ \frac12(\sqrt y+1)-\frac12(-\sqrt y+1) &0\le x\le1\\1 &x>1\end{cases}=\begin{cases}0 &y<0\\ \sqrt y &0\le x\le1\\1 &x>1\end{cases}$$
+
+Find the pdf for Y.
+
+Since $F_Y(y)$ was continuous, find 
+
+$$f_Y(y)=\frac{d}{dy}F_Y(y)=\begin{cases}\frac1{2\sqrt y} &0< y\le1\\0 &elsewhere\end{cases}$$
+
+#### 4-7. Special cases
+
+Assume the cdf is  continuous. Let Y=g(X) be a tranformation of X
+
+Suppose g increase (monotone increasing)
+
+$$F_Y(y)=P(Y\le y)=P(g(X)\le y)=P(X\le g^{-1}(y))=F_X(g^{-1}(y))$$
+
+$$Now,\ f_Y(y)=\frac{d}{dy}F_Y(y)=\frac{d}{dy}F_X(g^{-1}(y))=f_X(g^{-1}(y))\frac{d}{dy}g^{-1}(y)=f_X(x)\frac{dx}{dy}$$
+
+$$But\ y=g(x),\quad so x=g^{-1}(y)$$
+
+Suppose g decrease
+
+$$F_Y(y)=P(Y\le y)=P(g(X)\le y)=P(X\ge g^{-1}(y))=1-F_X(g^{-1}(y))$$
+
+works since F was continuous.
+
+$$f_Y(y)=\frac{d}{dy}F_Y(y)=\frac{d}{dy}(1-F_X(g^{-1}(y)))=-f_X(g^{-1}(y))\frac{d}{dy}g^{-1}(y)=-f_X(x)\frac{dx}{dy}$$
+
+> Summary: Case 1 g increase, Case 2 g decrease
+
+$$f_Y(y)=f_X(x)|\frac{dx}{dy}|$$
+
+#### 8-9. Example
+
+let X be a continuous rv with pdf
+
+$$f_x(x)=\begin{cases}1 &0<x<1\\0 &elsewhere\end{cases}$$
+
+
+$$f_Y(y)=\begin{cases}\frac12e^{\frac{y}2} &0<y<\infty\\0 &elsewhere\end{cases}$$
+
+#### 10-12. Example
+
+$$f_x(x)=\frac1{\sqrt{2\pi}}e^{-\frac{x^2}2}\quad -\infty<x<\infty$$
+
+Let $Y=X^2$, not monotone, so no shortcut
+
+$$F_Y(y)=P(Y\le y)=P(X^2\le y)=P(-\sqrt y\le X\le\sqrt y)=P(X\le\sqrt y)-P(X\le-\sqrt y)$$
+
+> Unfortunately, there is no closed form for $F_X(x)$
+
+
+$$f_Y(y)=\frac{d}{dy}F_Y(y)=\frac{d}{dy}[F_X(\sqrt y)-F_X(-\sqrt y)]=f_x(\sqrt y)\frac1{2\sqrt y}-f_x(-\sqrt y)\frac{-1}{2\sqrt y}$$
+
+$$=\frac1{\sqrt{2\pi}}e^{-\frac{y}2}\frac1{2\sqrt y}+\frac1{\sqrt{2\pi}}e^{-\frac{y}2}\frac1{2\sqrt y}=\frac1{\sqrt{2\pi}}e^{-\frac{y}2}\frac1{\sqrt y}\quad for\ y>0,\ -\infty<x<\infty$$
+
+$$f_Y(y)=\begin{cases}\frac1{\sqrt{2\pi y}}e^{-\frac{y}2} &y>0\\0 &elsewhere\end{cases}$$
+
+`2018.10.16`
 
 ### 2.2 Expected Values
 
-`2018.10.16`
+
 
 
 
