--- a/docs/assignment561/hw03.Rmd
+++ b/docs/assignment561/hw03.Rmd
@@ -106,19 +106,21 @@ $$f_Y(y)=f_X(x)|\frac{dx}{dy}|=\frac1{\sigma^2}xe^\frac{-(\frac x\sigma)^2}2|\fr
 
 **2.12** A random right triangle can be constructed in the following manner. Let X be a random angle whose distribution is uniform on $(0, \pi/2)$. For each X, construct a triangle as pictured below. Here, Y = height of the random triangle. For a fixed constant d, find the distribution of Y and EY.
 
-$$\because Y=d\tan X,\quad \therefore X=\arctan\frac Yd$$
+> Because X is a continuous uniform distribution from 0 to $\pi/2$,
+
+$$f(x)=\frac1{\frac\pi2-0}=\frac2\pi,\quad F_X(x)=\frac{x-0}{\frac\pi2-0}=\frac{2x}\pi\quad 0<x<\pi/2$$
+
+$$\because Y=d\tan X,\quad \therefore X=\arctan\frac Yd\quad 0<y<\infty$$
 
 $Y=d\tan X$ is a monotone inecreasing function. We can use shortcut.
 
-Let $F_X(x)=cx$ is a cdf, $\lim_{n\to\infty}cx=1,\quad0<x<\pi/2$. Hence, $c=\frac2\pi$ safisfy the equation.
+$$f_Y(y)=f_X(x)|\frac{dx}{dy}|=\frac2\pi|\frac{d(\arctan\frac yd)}{dy}|=\frac2\pi\frac{d(\frac yd)}{[(\frac yd)^2+1]}=\frac{2}{\pi d[(\frac yd)^2+1]}\quad 0<y<\infty$$
 
-$$\therefore F_X(x)=\frac{2x}\pi,\quad  f_X(x)=\frac2\pi\quad 0<x<\pi/2$$
+*Because Y is continuous,
 
-$$f_Y(y)=f_X(x)|\frac{dx}{dy}|=\frac2\pi|\frac{d(\arctan\frac yd)}{dy}|=\frac2\pi\frac{d(\frac yd)}{[(\frac yd)^2+1]}=\frac{2}{\pi d[(\frac yd)^2+1]}$$
+$$\because E[Y]=[g(X)]=\int_{-\infty}^\infty g(x)f(x)dx\quad \therefore E[Y]=[d\tan X]=\int_0^\infty d\tan x\frac2\pi dx=\frac2d\pi\int_0^\infty\tan x dx=diverges$$
 
-$$\because 0<X<\pi/2,\quad Y=d\tan X\in(0,\infty)\quad \therefore E[Y]\sim\infty$$
-
-The mean of Y is infinite.
+*The mean of Y is undefined.
 
 **2.17** A median of a distribution is a value m such that $P(X\le m)\ge\frac12\ and\ P(X\ge m)\ge\frac12$. (If X i s continuous, m satisfies $\int_{-\infty}^mf(x)dx=\int_m^\infty f(x)dx=\frac12$.) Find the median of the following distributions.
 
@@ -127,25 +129,26 @@ The mean of Y is infinite.
 
 $$F_X(x)=\int{f(x)dx}=\int3x^2=x^3\quad 0<x<1$$
 
-$$\lim_{x\to\infty}F_X(x)=\lim_{x\to\infty}x^3=1\quad 0<x<1$$
+let 0<m<1 satisfies
 
-F(x) is a cdf and has a pdf f(x).
+$$P(X\le m)=\int_{0}^m{f(x)dx}=\left.m^3\right|_0^m=m^3-0=\frac12\quad \therefore m=(\frac12)^{\frac13}$$
 
-$$(1)\quad \int_{0}^m{f(x)dx}=m^3-0=\frac12,\quad m=(\frac12)^{\frac13}$$
+This value also satisfies the other part:
 
-$$(2)\quad \int_m^{1}{f(x)dx}=1-m^3=\frac12$$
+$$P(X\ge m)=\int_m^{1}{f(x)dx}=\left.m^3\right|_m^1=1-m^3=\frac12$$
 
 Therefore, $m=(\frac12)^{\frac13}$ saitisfies $P(X\le m)\ge\frac12\ and\ P(X\ge m)\ge\frac12$ and is the median of this distribution.
 
 (b) $f(x)=\frac1{\pi(1+x^2)},\quad-\infty<x<\infty$
 
 $$F_X(x)=\int{f(x)dx}=\int\frac1{\pi(1+x^2)}=\frac{\arctan x}{\pi},\quad -\infty<x<\infty$$
-$$\lim_{x\to\infty}F_X(x)=\frac1\pi(\frac\pi2+\frac\pi2)=1$$
 
-F(x) is a cdf and has a pdf f(x).
+let $-\infty<m<\infty$ satisfies
 
-$$(1)\quad \int_{-\infty}^m{f(x)dx}=\frac{\arctan m-(-\pi/2)}{\pi}=\frac12,\quad \arctan m=0,\quad m=0$$
+$$P(X\le m)=\int_{-\infty}^m{f(x)dx}=\left.\frac{\arctan x}{\pi}\right|_{-\infty}^m=\frac{\arctan m-(-\pi/2)}{\pi}=\frac12\quad \therefore \arctan m=0,\quad m=0$$
 
-$$(2)\quad\int_m^{\infty}{f(x)dx}=\frac{\pi/2-\arctan m}{\pi}=\frac12$$
+This value also satisfies the other part:
+
+$$P(X\ge m)=\int_m^{\infty}{f(x)dx}=\left.\frac{\arctan x}{\pi}\right|_m^{\infty}=\frac{\pi/2-\arctan m}{\pi}=\frac12$$
 
 Therefore, $m=0$ saitisfies $P(X\le m)\ge\frac12\ and\ P(X\ge m)\ge\frac12$ and is the median of this distribution.
