update 561 hw3&lecture

--- a/docs/assignment561/hw03.Rmd
+++ b/docs/assignment561/hw03.Rmd
@@ -1,6 +1,5 @@
 ---
-title: "HW3"
-subtitle: STAT561 Fall 2018
+subtitle: "HW3 STAT561 Fall 2018"
 author: 'Shen Qu'
 date: "10/18/2018"
 output: html_document
@@ -67,9 +66,9 @@ Therefore, for any $x_i<x_j,\ \lim_{n\to\infty}F(x_i)<\lim_{n\to\infty}F(x_j)$. 
 
 > Step3: Proof (a)
 
-$$\lim_{n\to\infty}F(x)=\lim_{n\to\infty}P((-\infty, x])=P(\lim_{n\to\infty}(-\infty, x])=P(-\infty, \infty)=1$$
+$$\lim_{x\to\infty}F(x)=\lim_{x\to\infty}P((-\infty, x])=P(\lim_{x\to\infty}(-\infty, x])=P(-\infty, \infty)=1$$
 
-$$\lim_{n\to-\infty}F(x)=\lim_{n\to-\infty}P((-\infty, x])=P(\lim_{n\to-\infty}(-\infty, x])=P(\emptyset)=0$$
+$$\lim_{x\to-\infty}F(x)=\lim_{x\to-\infty}P((-\infty, x])=P(\lim_{x\to-\infty}(-\infty, x])=P(\emptyset)=0$$
 
 **2.2** In each of the following find the pdf of Y.
 
@@ -106,7 +105,7 @@ $$f_Y(y)=f_X(x)|\frac{dx}{dy}|=\frac1{\sigma^2}xe^\frac{-(\frac x\sigma)^2}2|\fr
 
 **2.12** A random right triangle can be constructed in the following manner. Let X be a random angle whose distribution is uniform on $(0, \pi/2)$. For each X, construct a triangle as pictured below. Here, Y = height of the random triangle. For a fixed constant d, find the distribution of Y and EY.
 
-> Because X is a continuous uniform distribution from 0 to $\pi/2$,
+Because X is a continuous uniform distribution from 0 to $\pi/2$,
 
 $$f(x)=\frac1{\frac\pi2-0}=\frac2\pi,\quad F_X(x)=\frac{x-0}{\frac\pi2-0}=\frac{2x}\pi\quad 0<x<\pi/2$$
 
@@ -116,11 +115,11 @@ $Y=d\tan X$ is a monotone inecreasing function. We can use shortcut.
 
 $$f_Y(y)=f_X(x)|\frac{dx}{dy}|=\frac2\pi|\frac{d(\arctan\frac yd)}{dy}|=\frac2\pi\frac{d(\frac yd)}{[(\frac yd)^2+1]}=\frac{2}{\pi d[(\frac yd)^2+1]}\quad 0<y<\infty$$
 
-*Because Y is continuous,
+Because Y is continuous,
 
 $$\because E[Y]=[g(X)]=\int_{-\infty}^\infty g(x)f(x)dx\quad \therefore E[Y]=[d\tan X]=\int_0^\infty d\tan x\frac2\pi dx=\frac2d\pi\int_0^\infty\tan x dx=diverges$$
 
-*The mean of Y is undefined.
+Therefore, the mean of Y is undefined.
 
 **2.17** A median of a distribution is a value m such that $P(X\le m)\ge\frac12\ and\ P(X\ge m)\ge\frac12$. (If X i s continuous, m satisfies $\int_{-\infty}^mf(x)dx=\int_m^\infty f(x)dx=\frac12$.) Find the median of the following distributions.
 
@@ -133,7 +132,7 @@ let 0<m<1 satisfies
 
 $$P(X\le m)=\int_{0}^m{f(x)dx}=\left.m^3\right|_0^m=m^3-0=\frac12\quad \therefore m=(\frac12)^{\frac13}$$
 
-This value also satisfies the other part:
+This value also satisfies another part:
 
 $$P(X\ge m)=\int_m^{1}{f(x)dx}=\left.m^3\right|_m^1=1-m^3=\frac12$$
 
@@ -147,7 +146,7 @@ let $-\infty<m<\infty$ satisfies
 
 $$P(X\le m)=\int_{-\infty}^m{f(x)dx}=\left.\frac{\arctan x}{\pi}\right|_{-\infty}^m=\frac{\arctan m-(-\pi/2)}{\pi}=\frac12\quad \therefore \arctan m=0,\quad m=0$$
 
-This value also satisfies the other part:
+This value also satisfies another part:
 
 $$P(X\ge m)=\int_m^{\infty}{f(x)dx}=\left.\frac{\arctan x}{\pi}\right|_m^{\infty}=\frac{\pi/2-\arctan m}{\pi}=\frac12$$
 
