--- a/static/assignment561/hw03.Rmd
+++ b/static/assignment561/hw03.Rmd
@@ -1,5 +1,5 @@
 ---
-subtitle: "HW3 STAT561 Fall 2018"
+title: "STAT561 Fall 2018 HW3"
 author: 'Shen Qu'
 date: "10/18/2018"
 output: html_document
