--- a/docs/lecture561/lecture04.Rmd
+++ b/docs/lecture561/lecture04.Rmd
@@ -109,17 +109,18 @@ $$\sigma^2=E[x^2-2x\mu+\mu^2]=E[x^2]-2\mu E(x)+\mu^2]=E[x^2]-2\mu^2+\mu^2]=E[x^2
 
 #### 1. Properties
 
-****
+
 
 ### 2.3 Moments and Moment Generating Functions
 
-****
+
 
 #### 3. Monment
 
+****
 Definition: $E(X^n)$ is the mean of the random variable
-
-$$\mu_n'=E(X^n),\quad note\quad \mu_1'=\mu$$
+****
+$\mu_n'=E(X^n),\quad note\quad \mu_1'=\mu$
 
 ### 2.4 Diffenetiating Under an Integral Sign
 
