561 hw3 try flowchart

--- a/docs/assignment561/hw03.Rmd
+++ b/docs/assignment561/hw03.Rmd
@@ -115,9 +115,11 @@ $Y=d\tan X$ is a monotone inecreasing function. We can use shortcut.
 
 $$f_Y(y)=f_X(x)|\frac{dx}{dy}|=\frac2\pi|\frac{d(\arctan\frac yd)}{dy}|=\frac2\pi\frac{d(\frac yd)}{[(\frac yd)^2+1]}=\frac{2}{\pi d[(\frac yd)^2+1]}\quad 0<y<\infty$$
 
-Because Y is continuous,
+<!--Because Y is continuous,
 
-$$\because E[Y]=[g(X)]=\int_{-\infty}^\infty g(x)f(x)dx\quad \therefore E[Y]=[d\tan X]=\int_0^\infty d\tan x\frac2\pi dx=\frac2d\pi\int_0^\infty\tan x dx=diverges$$
+$$\because E[Y]=E[g(X)]=\int_{-\infty}^\infty g(x)f(x)dx\quad \therefore E[Y]=[d\tan X]=\int_0^\infty d\tan x\frac2\pi dx=\frac2d\pi\int_0^\infty\tan x dx=\infty$$-->
+
+Because $f_Y(y)$ is the Cauchy distribution restricted to (0,1),
 
 Therefore, the mean of Y is undefined.
 
